--- a/TestNatvis/TestNatvis.vcxproj
+++ b/TestNatvis/TestNatvis.vcxproj
@@ -143,7 +143,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="MyStlVis.natvis" />
+    <Natvis Include="MyVis.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
